# ScreenCaster

./: .gitignore  README.md  launcher.bat  launcher.sh  script_avviamento.bat  script_avviamento.sh
Prove/: script_avviamento.sh
Prove/annotation_tool/src/: main.rs
Prove/capture/: Cargo.toml
Prove/capture/src/: lib.rs  main.rs
Prove/capture_2/: Cargo.toml
Prove/capture_2/src/: main.rs
Prove/capture_3/: Cargo.toml
Prove/capture_3/src/: main.rs
Prove/config/: crop.txt  hotkeys.txt  save_path.txt  streamers_list.db  streamers_list.txt
Prove/gui/: Cargo.toml
Prove/gui/src/: main.rs  myapp.rs
Prove/network_client/: Cargo.toml
Prove/network_client/src/: main.rs  old_main.rs  utils_ffmpeg.rs  workers.rs
Prove/network_client_copy/: Cargo.toml
Prove/network_client_copy/src/: main.rs  utils_ffmpeg.rs  workers.rs
Prove/network_client_gui/: Cargo.toml
Prove/network_client_gui/src/: gui.rs  main.rs  utils_ffmpeg.rs  video_player.rs
Prove/network_server/: Cargo.toml
Prove/network_server/src/: main.rs  utils_ffmpeg.rs
Prove/overlay_crop/: Cargo.toml
Prove/overlay_crop/src/: main.rs
Prove/screen_capture_marco/: Cargo.toml
Prove/screen_capture_marco/src/: annotation_tool.rs  gif_widget.rs  gui.rs  hotkeys.rs  lib.rs  main.rs  screen_capture.rs  streaming_client.rs  utils.rs  workers.rs
Prove/screen_caster/: Cargo.toml  script_avviamento.sh
Prove/screen_caster/src/: gif_widget.rs  gui.rs  hotkeys.rs  main.rs  named_pipes.rs  screen_capture.rs  streaming_client.rs  streaming_server.rs  utils.rs  workers.rs
annotation_tool/: Cargo.toml
annotation_tool/src/: buttons.rs  main.rs
config/: crop.txt  hotkeys.txt  save_path.txt  streamers_list.db
overlay_crop/: Cargo.toml
overlay_crop/src/: main.rs
screen_caster/: Cargo.toml
screen_caster/src/: error_banner.rs  gif_widget.rs  gui.rs  hotkeys.rs  main.rs  streamers_table.rs  streaming_client.rs  streaming_server.rs  utils.rs  workers.rs
setup/: Cargo.toml  check_ffmpeg.rs
setup/src/: main.rs
