[package]
name = "screen_caster"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-sidecar = { version = "2.0.3", features = ["named_pipes"]}
anyhow = "1.0.86"
iced = { version = "0.10.0", features = ["wgpu", "image", "async-std", "advanced", "svg"] }
winit = "0.30.5"
global-hotkey = "0.6.2"
screenshots = "0.6.0"
ipnetwork = "*"
if-addrs = "0.6.4"
gif = "0.13.1"
gif-dispose = "*"
chrono = "*"
crossbeam-channel = "*"
crossbeam-utils = "*"
local-ip-address= "*"
image =  "*"
tokio = { version = "1.40", features = ["full"] }
winapi = {version = "0.3", features = ["iphlpapi"]}
ipnet = "*"
ipconfig = "*"
pnet = "*"
rgb = {version = "*", features = ["as-bytes"]}
native-dialog = "*"
dirs = "*"
uuid = {version = "*", features = ["v4"]}
thiserror = "*"

[dependencies.rusqlite]
version = "0.32.0"
features = ["bundled"]