[package]
name = "network_client_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.12.1", features = ["image"]}
tokio = { version = "1", features = ["full"] }
ffmpeg-sidecar = "1.1.2" 
image="*"
iced_futures="0.12.0"
